--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -1,6 +1,6 @@
 <div class="form-container">
   <h2>Contact Form</h2>
-  <form>
+  <form (ngSubmit)="onSubmit()">
     <label for="name">Name:</label>
     <input type="text" id="name" [(ngModel)]="name" name="name" required />
 
