--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -2,10 +2,10 @@
   <h2>Contact Form</h2>
   <form (ngSubmit)="onSubmit()">
     <label for="name">Name:</label>
-    <input type="text" id="name" [(ngModel)]="name" name="name" required />
+    <input type="text" id="name" [(ngModel)]="name" name="name" required/>
 
     <label for="email">Email:</label>
-    <input type="email" id="email"  [(ngModel)]="email"  name="email" required />
+    <input type="email" id="email" [(ngModel)]="email" name="email" required/>
 
     <label for="message">Message:</label>
     <textarea id="message" [(ngModel)]="message" name="message" required></textarea>
@@ -15,8 +15,21 @@
 
   <div class="output" *ngIf="isSubmitted">
     <h3>Submitted Data</h3>
-    <p><strong>Name:</strong> {{name}} <span id="output-name"></span></p>
-    <p><strong>Email:</strong> {{email}} <span id="output-email"></span></p>
-    <p><strong>Message:</strong> {{message}} <span id="output-message"></span></p>
+    <table>
+      <tr>
+        <th>N°</th>
+        <th>Name</th>
+        <th>Email</th>
+        <th>Message</th>
+      </tr>
+      <tr *ngFor="let line of formsLines; let index = index">
+        <td>{{ index + 1 }}</td>
+        <td>{{ line.name }}</td>
+        <td>{{ line.email }}</td>
+        <td>{{ line.message }}</td>
+      </tr>
+    </table>
   </div>
+
+
 </div>
