Add feature to delete messageDetails card
Send Data on @Output :
child `message-details` -> parent `contact-form`

--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -37,6 +37,8 @@
     <app-message-details
       *ngFor="let md of messageDetails; let index = index"
       [messageDetails]="md"
+      [index]="index"
+      (delete)="deleteMessage($event)"
     ></app-message-details>
   </div>
 </div>
