--- a/src/app/message-details/message-details.component.html
+++ b/src/app/message-details/message-details.component.html
@@ -6,6 +6,7 @@
   <div class="message-content">
     <p>{{ messageDetails.message }}</p>
   </div>
+  <button type="button" (click)="OnDelete()">Delete</button>
 </div>
 
 
