Impl how to get `pathVariable` with `ActivatedRoute`

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,3 +6,4 @@
   <li>We value quality and user experience.</li>
 </ul>
 <p>Thank you for visiting our about page!</p>
+<p>Path variable is here : {{pathVariable}}</p>
