Impl how to get `queryParam` with `ActivatedRoute`
ex: http://localhost:4200/about?lastname=doe&username=jean

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -7,3 +7,4 @@
 </ul>
 <p>Thank you for visiting our about page!</p>
 <p>Path variable is here : {{pathVariable}}</p>
+<p>Query param is here : {{queryParam}}</p>
