--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -2,6 +2,7 @@
 <div class="menu">
   <ul>
     <li><a routerLink="home">Home</a></li>
+    <li><a routerLink="fake-api">Fake-api</a></li>
     <li><a
       href="javascript:void(0)"
       (click)="navigateToAbout()">About</a></li>
