--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,10 +1,22 @@
-
-<div class="menu">
-  <ul>
-    <li><a routerLink="home">Home</a></li>
-    <li><a routerLink="fake-api">Fake-api</a></li>
-    <li><a
-      href="javascript:void(0)"
-      (click)="navigateToAbout()">About</a></li>
-  </ul>
-</div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Logo</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="home">Accueil <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Ajouter</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="products">Products</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="about">à Propos</a>
+      </li>
+    </ul>
+  </div>
+</nav>
